# MMT

chai3d_virtual_env_local/: CMakeLists.txt  main.cpp
chai3d_virtual_env_local/Udp_comm/include/Thread/: Thread_safe_unit_msg.h
chai3d_virtual_env_local/Udp_comm/include/Udp_core/: Udp_client.h  Udp_sender.h
chai3d_virtual_env_local/Udp_comm/src/Udp_core/: Udp_sender.cpp
chai3d_virtual_env_remote/: CMakeLists.txt  main.cpp
chai3d_virtual_env_remote/Tools/JSONManager/: JSON_manager.h
chai3d_virtual_env_remote/Tools/StringTools/: String_tools.h
chai3d_virtual_env_remote/Udp_comm/: CMakeLists.txt
chai3d_virtual_env_remote/Udp_comm/include/Udp_core/: Endpoint_info_and_msg.h  Udp_receiver.h  Udp_server.h
chai3d_virtual_env_remote/Udp_comm/src/Udp_core/: Udp_client.cpp  Udp_receiver.cpp  main.cpp
teleoperation_architecture/: CMakeLists.txt
teleoperation_architecture/Robotics/: CMakeLists.txt
teleoperation_architecture/Robotics/Control/PID/: PIDController.cpp  PIDController.h
teleoperation_architecture/Robotics/RobotAdaptor/: I_Robot.h
teleoperation_architecture/Robotics/RobotAdaptor/Chai3d_robot/: Falcon_robot.cpp  Falcon_robot.h
teleoperation_architecture/Robotics/RobotAdaptor/Force_dimension_robot/: Falcon_robot_fd.cpp  Falcon_robot_fd.h
teleoperation_architecture/Tools/StringTools/: String_tools.cpp
teleoperation_architecture/Udp_comm/include/Thread/: Thread_safe_queue.h  Thread_safe_unit_msg.h
teleoperation_architecture/Udp_comm/include/Udp_core/: Endpoint_info_and_msg.h  Udp_client.h  Udp_server.h
teleoperation_architecture/Udp_comm/src/Udp_core/: Udp_server.cpp  main.cpp
teleoperation_architecture/examples/01_two_falcon_follow_and_one_ve/: CMakeLists.txt
teleoperation_architecture/examples/01_two_falcon_follow_and_one_ve/Main_robot/: main_robot.cpp
teleoperation_architecture/examples/01_two_falcon_follow_and_one_ve/Secondary_robot/: secondary_robot.cpp
teleoperation_architecture/main/: CMakeLists.txt  main.cpp
teleoperation_architecture/unit_tests/: CMakeLists.txt
teleoperation_architecture/unit_tests/Robotics/Control/: CMakeLists.txt  PIDController_test.cpp  TDPAController_test.cpp
teleoperation_architecture/unit_tests/Udp_comm/: CMakeLists.txt  Falcon_Falcon_Follow_Task.cpp  falcon_client_test.cpp  two_falcon_one_ve_test.cpp
